--- a/Back/src/main/resources/application.properties
+++ b/Back/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.username=root
 spring.datasource.password=azazaz1A2025
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+jwt.secret=your-256-bit-secret-key-must-be-at-least-32-characters-long
+jwt.expiration=604800
