--- a/Front/package.json
+++ b/Front/package.json
@@ -21,7 +21,7 @@
     "@angular/common": "19.0.5",
     "@angular/compiler": "19.0.5",
     "@angular/core": "19.0.5",
-    "@angular/forms": "19.0.5",
+    "@angular/forms": "^19.0.5",
     "@angular/material": "^19.2.7",
     "@angular/platform-browser": "19.0.5",
     "@angular/platform-browser-dynamic": "19.0.5",
