--- a/Back/src/main/resources/application.properties
+++ b/Back/src/main/resources/application.properties
@@ -1,9 +1,8 @@
 spring.application.name=backdev
 spring.datasource.url=jdbc:mysql://localhost:3306/backdev
 spring.datasource.username=root
-spring.datasource.password=MYSQL123
+spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 jwt.secret=your-256-bit-secret-key-must-be-at-least-32-characters-long
 jwt.expiration=604800
-server.port=8081
