Sauvegarde avant pull

--- a/Back/src/main/resources/application.properties
+++ b/Back/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.jpa.show-sql=true
 jwt.secret=your-256-bit-secret-key-must-be-at-least-32-characters-long
 jwt.expiration=604800
 server.port=8081
+spring.jackson.property-naming-strategy=SNAKE_CASE
