--- a/Back/pom.xml
+++ b/Back/pom.xml
@@ -74,7 +74,10 @@
 			<version>0.11.5</version>
 		</dependency>
 
-	
+	<dependency>
+    <groupId>com.fasterxml.jackson.core</groupId>
+    <artifactId>jackson-databind</artifactId>
+</dependency>
 	</dependencies>
 
 	<build>
