--- a/Back/src/main/resources/application.properties
+++ b/Back/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=backdev
-spring.datasource.url=jdbc:mysql://localhost:3306/backdev
+spring.datasource.url=jdbc:mysql://localhost:3306/back
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=azazaz1A2025
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 jwt.secret=your-256-bit-secret-key-must-be-at-least-32-characters-long
