--- a/Back/src/main/resources/application.properties
+++ b/Back/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=backdev
-spring.datasource.url=jdbc:mysql://localhost:3306/backdev
+spring.datasource.url=jdbc:mysql://localhost:3306/back
 spring.datasource.username=root
 
-spring.datasource.password=root
+spring.datasource.password=azazaz1A2025
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
