--- a/Back/src/main/resources/application.properties
+++ b/Back/src/main/resources/application.properties
@@ -7,3 +7,9 @@ spring.jpa.show-sql=true
 jwt.secret=your-256-bit-secret-key-must-be-at-least-32-characters-long
 jwt.expiration=604800
 server.port=8081
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=hibatallah.benaissa@gmail.com
+spring.mail.password=hibabenaissa
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
