--- a/Back/src/main/resources/application.properties
+++ b/Back/src/main/resources/application.properties
@@ -6,8 +6,8 @@ spring.datasource.password=azazaz1A2025
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+jwt.expiration=86400000
 jwt.secret=your-256-bit-secret-key-must-be-at-least-32-characters-long
-jwt.expiration=604800
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
