--- a/Front/angular.json
+++ b/Front/angular.json
@@ -25,8 +25,7 @@
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": ["src/favicon.ico", "src/assets"],
-            "styles": ["src/styles.scss"],
-            "scripts": [ "https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"]
+            "styles": ["src/styles.scss"]
           },
           "configurations": {
             "production": {
