--- a/Back/src/main/resources/application.properties
+++ b/Back/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.application.name=backdev
 spring.datasource.url=jdbc:mysql://localhost:3306/backdev
 spring.datasource.username=root
 
-spring.datasource.password=root
-
+spring.datasource.password=MYSQL123
+server.port=8081
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 jwt.expiration=86400000
