--- a/Back/src/main/resources/application.properties
+++ b/Back/src/main/resources/application.properties
@@ -4,7 +4,9 @@ spring.datasource.username=root
 
 spring.datasource.password=azazaz1A2025
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.defer-datasource-initialization=true
+
 spring.jpa.show-sql=true
 jwt.expiration=86400000
 jwt.secret=your-256-bit-secret-key-must-be-at-least-32-characters-long
