--- a/Back/src/main/resources/application.properties
+++ b/Back/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.username=root
 
 
 
-spring.datasource.password=root
+spring.datasource.password=MYSQL123
 
 spring.jpa.hibernate.ddl-auto =update
 spring.jpa.defer-datasource-initialization=true
@@ -13,6 +13,7 @@ spring.jpa.show-sql=true
 jwt.expiration=86400000
 jwt.secret=your-256-bit-secret-key-must-be-at-least-32-characters-long
 
+server.port=8081
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
