--- a/Back/src/main/resources/application.properties
+++ b/Back/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.application.name=backdev
-spring.datasource.url=jdbc:mysql://localhost:3306/back
+spring.datasource.url=jdbc:mysql://localhost:3306/backdev
 spring.datasource.username=root
 
 
 
 
-spring.datasource.password=azazaz1A2025
+spring.datasource.password=MYSQL123
 
 spring.jpa.hibernate.ddl-auto =update
 spring.jpa.defer-datasource-initialization=true
