--- a/Back/src/main/resources/application.properties
+++ b/Back/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.application.name=backdev
-spring.datasource.url=jdbc:mysql://localhost:3306/back
+spring.datasource.url=jdbc:mysql://localhost:3306/backdev
 spring.datasource.username=root
 
 
 
 
-spring.datasource.password=azazaz1A2025
+spring.datasource.password=root
 
 spring.jpa.hibernate.ddl-auto =update
 spring.jpa.defer-datasource-initialization=true
@@ -14,7 +14,7 @@ spring.jpa.show-sql=true
 jwt.expiration=86400000
 jwt.secret=your-256-bit-secret-key-must-be-at-least-32-characters-long
 
-server.port=8081
+
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
