--- a/Back/src/main/resources/application.properties
+++ b/Back/src/main/resources/application.properties
@@ -1,12 +1,7 @@
 spring.application.name=backdev
-spring.datasource.url=jdbc:mysql://localhost:3306/backdev
+spring.datasource.url=jdbc:mysql://localhost:3306/back
 spring.datasource.username=root
-
-
-
-
-
-spring.datasource.password=root
+spring.datasource.password=azazaz1A2025
 
 
 
