Very Final Commit

--- a/Back/src/main/resources/application.properties
+++ b/Back/src/main/resources/application.properties
@@ -3,7 +3,9 @@ spring.datasource.url=jdbc:mysql://localhost:3306/back
 spring.datasource.username=root
 spring.datasource.password=azazaz1A2025
 
-
+logging.level.root=INFO
+logging.level.com.dev.backdev=DEBUG
+logging.file.name=C:\Users\lenovo\Desktop\Vie Associative Enicar\Back\Logs\app.log
 
 
 spring.jpa.hibernate.ddl-auto =update
